# idao-21-baseline

./: Makefile  README.md  check_import.sh  check_modules.py  config.ini  generate_submission.py  pyproject.toml  report.py  requirements.txt  run.sh  train.py
checkpoints/lightning_logs/version_0/: events.out.tfevents.1615399427.devbox0.693213.0
checkpoints/lightning_logs/version_1/: events.out.tfevents.1615399587.devbox0.693213.1
idao/: data_module.py  dataloader.py  model.py  utils.py
